# GV_OS

./: ARCHITECTURE_NOTES.md  README.md  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
.github/workflows/: build-windows.yml
src/: main.tsx  routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: analog-clock.jsx  app-shell.jsx  assignment-dialog.jsx  certification-dialog.jsx  command-palette.jsx  confirm-delete.jsx  digital-clock.jsx  event-dialog.jsx  fab-capture.jsx  idea-dialog.jsx  lock-screen.jsx  project-task-dialog.jsx  quick-capture.jsx  rich-editor.jsx  skill-dialog.jsx  task-dialog.jsx
src/lib/: db.ts  error-reporting.js  format.js  lock-store.js  settings-store.js  theme.js  timer.js  ui-store.js
src/lib/services/: assignment-service.ts  backup-service.ts  base-service.ts  calendar-service.ts  certification-service.ts  dashboard-service.ts  goal-service.ts  idea-service.ts  index.ts  notes-service.ts  project-service.ts  reminder-service.ts  search-service.ts  skill-service.ts  study-service.ts  task-service.ts
src/routes/: __root.jsx  academic.jsx  archive.jsx  assignments.jsx  calendar.jsx  career.jsx  focus.jsx  ideas.jsx  index.jsx  knowledge.jsx  notifications.jsx  project-tasks.jsx  projects.jsx  settings.jsx  study.jsx  tasks.jsx
